Added more text to About section

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
                 <section id='about'>
                     <h1>Try This&trade; Today!</h1>
                     <p>Nostrud irure proident aliquip in magna et fugiat laborum laborum exercitation in esse exercitation occaecat. Deserunt voluptate sunt irure laboris duis nulla. Culpa tempor exercitation adipisicing eiusmod sint nulla sunt. Velit irure ea sunt dolor anim tempor anim esse dolore irure. Voluptate magna non sint nisi consectetur esse anim eu consequat do elit laboris. In cupidatat nostrud mollit do culpa minim.</p>
+                    <h2>Duis commodo nisi consequat in duis ad anim laboris.</h2>
+                    <p>Exercitation Lorem id deserunt aliquip esse ipsum qui reprehenderit laboris. Eu ullamco aliquip occaecat et esse reprehenderit non irure. Eiusmod quis excepteur duis in irure amet occaecat officia qui exercitation deserunt. Ad voluptate non nulla consequat aliqua mollit dolor in quis. Incididunt ipsum proident cupidatat do aute enim.</p>
+                    <p>Irure irure laboris mollit culpa aliqua tempor pariatur sint qui amet. Ea veniam minim proident qui aute exercitation cillum non irure. Velit nisi sunt minim culpa nostrud in consectetur. Incididunt ex ut sit occaecat quis minim elit consequat amet adipisicing voluptate et.</p>
+                    <p>Ipsum occaecat pariatur aute cillum magna quis duis id quis velit culpa laborum ex. Adipisicing dolore aliquip minim commodo aute et veniam aute non ea irure. Id reprehenderit esse nisi aute dolore ullamco occaecat ea eiusmod elit occaecat occaecat fugiat duis. Eu esse ex cupidatat ut.</p>
+                    <p>Irure deserunt sint duis velit deserunt. Cupidatat tempor minim quis aliqua proident qui tempor ad cillum aute deserunt et ad. Et ex eu culpa nostrud deserunt incididunt reprehenderit sit veniam sunt minim. Dolore aliqua quis veniam laboris in tempor.</p>
                 </section>
                 <section id='cards'>
                    <div>
