Cut down on text in #cards section

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                        <img src='' alt=''> <!--Change-->
                        <h2>Card 1</h2>
                        <h3>£100 <span class='small-text'>per month</span></h3>
-                       <p>Tempor et qui consectetur ullamco aliquip do exercitation voluptate eiusmod exercitation.</p>
+                       <p>Tempor et qui consectetur ullamco aliquip.</p>
                        <ul>
-                           <li>Ad pariatur exercitation aliqua consectetur culpa aute nostrud nostrud nostrud elit sint.</li>
-                           <li>Sint incididunt fugiat cillum enim aliqua ad sunt sunt dolore Lorem aliqua aliquip dolore sint.</li>
+                           <li>Ad pariatur exercitation aliqua aute nostrud nostrud sint.</li>
+                           <li>Sint incididunt enim aliqua dolore Lorem aliqua aliquip dolore sint.</li>
                            <li>Velit ad est do voluptate do duis anim.</li>
                        </ul>
                    </div>
@@ -49,22 +49,22 @@
                         <img src='' alt=''> <!--Change-->
                         <h2>Card 2</h2>
                         <h3>£150 <span class='small-text'>per month</span></h3>
-                        <p>Pariatur non amet excepteur enim ea irure irure do ea.</p>
+                        <p>Pariatur non amet excepteur enim ea irure.</p>
                         <ul>
-                            <li>Amet nostrud sit occaecat dolor aliquip incididunt labore adipisicing.</li>
-                            <li>Ad ipsum commodo nostrud occaecat magna pariatur minim tempor voluptate veniam voluptate.</li>
-                            <li>Incididunt dolor sint nisi fugiat et aliquip ullamco non dolore anim.</li>
+                            <li>Amet nostrud sit occaecat dolor aliquipt adipisicing.</li>
+                            <li>Ad ipsum commodo pariatur minim tempor voluptate veniam voluptate.</li>
+                            <li>Incididunt dolor sint aliquip ullamco non dolore anim.</li>
                         </ul>
                     </div>
                     <div>
                         <img src='' alt=''> <!--Change-->
                         <h2>Card 3</h2>
                         <h3>£200 <span class='small-text'>per month</span></h3>
-                        <p>Nulla fugiat et ullamco sit eiusmod culpa deserunt enim officia non.</p>
+                        <p>Nulla fugiat et ullamco sit eiusmod culpa deserunt.</p>
                         <ul>
                             <li>Commodo in eiusmod do occaecat irure ipsum consequat occaecat.</li>
-                            <li>Veniam ex ipsum eu elit irure aliqua aliqua fugiat duis voluptate sint enim.</li>
-                            <li>Nostrud deserunt aliqua proident incididunt ut culpa deserunt voluptate id.</li>
+                            <li>Veniam ex ipsum eu elit irure aliqua fugiat duis voluptate sint enim.</li>
+                            <li>Nostrud deserunt aliqua proident.</li>
                         </ul>
                     </div>
                 </section>
