--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                            <li>Sint incididunt enim aliqua dolore Lorem aliqua aliquip dolore sint.</li>
                            <li>Velit ad est do voluptate do duis anim.</li>
                        </ul>
+                       <button>Select</button>
                    </div>
                    <div>
                         <img src='' alt=''> <!--Change-->
@@ -55,6 +56,7 @@
                             <li>Ad ipsum commodo pariatur minim tempor voluptate veniam voluptate.</li>
                             <li>Incididunt dolor sint aliquip ullamco non dolore anim.</li>
                         </ul>
+                        <button>Select</button>
                     </div>
                     <div>
                         <img src='' alt=''> <!--Change-->
@@ -66,6 +68,7 @@
                             <li>Veniam ex ipsum eu elit irure aliqua fugiat duis voluptate sint enim.</li>
                             <li>Nostrud deserunt aliqua proident.</li>
                         </ul>
+                        <button>Select</button>
                     </div>
                 </section>
                 <section>
