Added a subheading and more paragraphs to #about

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
                     <p class='columns'>Irure irure laboris mollit culpa aliqua tempor pariatur sint qui amet. Ea veniam minim proident qui aute exercitation cillum non irure. Velit nisi sunt minim culpa nostrud in consectetur. Incididunt ex ut sit occaecat quis minim elit consequat amet adipisicing voluptate et.</p>
                     <p class='columns'>Ipsum occaecat pariatur aute cillum magna quis duis id quis velit culpa laborum ex. Adipisicing dolore aliquip minim commodo aute et veniam aute non ea irure. Id reprehenderit esse nisi aute dolore ullamco occaecat ea eiusmod elit occaecat occaecat fugiat duis. Eu esse ex cupidatat ut.</p>
                     <p class='columns'>Irure deserunt sint duis velit deserunt. Cupidatat tempor minim quis aliqua proident qui tempor ad cillum aute deserunt et ad. Et ex eu culpa nostrud deserunt incididunt reprehenderit sit veniam sunt minim. Dolore aliqua quis veniam laboris in tempor.</p>
+                    <h3 class='columns'>Dolor veniam anim voluptate dolore aliqua veniam ex.</h3>
+                    <p class="columns">Nisi adipisicing consequat incididunt pariatur. Nostrud ad ipsum ullamco aute laboris Lorem ex. Irure ex pariatur ex officia ut elit amet adipisicing excepteur velit dolor adipisicing. Aliquip incididunt non sint nulla sint aute sunt magna consequat mollit. Sit deserunt deserunt nostrud cillum minim cillum proident consectetur veniam anim in. Duis anim magna laborum ea irure excepteur quis fugiat commodo do dolore reprehenderit.</p>
+                    <p class='columns'>Ullamco ut eu enim Lorem aute. Irure cillum elit adipisicing dolor fugiat commodo consectetur incididunt eu ex nulla tempor elit labore. Nulla qui sunt veniam in voluptate id ullamco. Fugiat sunt ipsum eu sit excepteur eu nostrud consequat. Voluptate elit ullamco deserunt sit ex.</p>
                 </section>
                 <section id='cards'>
                    <div>
