Added placeholder images and alt text

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     </head>
     <body>
         <header id='header'> <!--User Story #1-->
-            <img id='header-img' src='' alt=''> <!--User Story #2--> <!--Might replace with a <picture>--> <!--Change-->
+            <img id='header-img' src='images/logo-trans-white.svg' alt='Company logo, placeholder'> <!--User Story #2--> <!--Might replace with a <picture>--> <!--Change-->
             <nav id='nav-bar'> <!--User Story #3-->
-                <a class='nav-link' href='#video' alt=''>Video</a>
-                <a class='nav-link' href='#about' alt=''>About</a>
-                <a class='nav-link' href='#cards' alt=''>Pricing</a> <!--User Story #4 & #5-->
+                <a class='nav-link' href='#video' alt='Jump to video'>Video</a>
+                <a class='nav-link' href='#about' alt='Jump to about section'>About</a>
+                <a class='nav-link' href='#cards' alt='Jump to pricing'>Pricing</a> <!--User Story #4 & #5-->
             </nav>
         </header>
         <main>
@@ -38,7 +38,7 @@
                 </section>
                 <section id='cards'>
                    <div>
-                       <img src='' alt=''> <!--Change-->
+                       <img src='images/logo-trans-white.svg' alt='Placeholder'> <!--Change-->
                        <h2>Card 1</h2>
                        <h3>£100 <span class='small-text'>per month</span></h3>
                        <p>Tempor et qui consectetur ullamco aliquip.</p>
@@ -50,7 +50,7 @@
                        <button>Select</button>
                    </div>
                    <div>
-                        <img src='' alt=''> <!--Change-->
+                        <img src='images/logo-trans-white.svg' alt='Placeholder'> <!--Change-->
                         <h2>Card 2</h2>
                         <h3>£150 <span class='small-text'>per month</span></h3>
                         <p>Pariatur non amet excepteur enim ea irure.</p>
@@ -62,7 +62,7 @@
                         <button>Select</button>
                     </div>
                     <div>
-                        <img src='' alt=''> <!--Change-->
+                        <img src='images/logo-trans-white.svg' alt='Placeholder'> <!--Change-->
                         <h2>Card 3</h2>
                         <h3>£200 <span class='small-text'>per month</span></h3>
                         <p>Nulla fugiat et ullamco sit eiusmod culpa deserunt.</p>
